2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-ps-surface.c: (pattern_is_translucent): Add missing
	(putatively unreachable) return value.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-image-surface.c:
	(_cairo_image_surface_set_clip_region): Remove the copying of the
	region. This was a workaround for a missing copy bug in libpixman
	that has since been fixed. So now it was just a memory leak.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c (read_png): Patch memory leak of png_info
	object.

2005-07-14  Carl Worth  <cworth@cworth.org>
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/create-for-png-ref.png:
	* test/create-for-png.c:
	* test/create-from-png.c: (draw): Rename create-for-png test to
	create-from-png to match the naming of the
	cairo_image_surface_create_from_png function.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cleanup_xcb), (cleanup_xlib),
	(cairo_test_for_target), (cairo_test_real): Patch a few memory
	leaks.

2005-07-13  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-meta-surface.c: (_cairo_meta_surface_replay): Use
	the _cairo_surface_*() functions when replaying.
	
	* src/cairo-ps-surface.c: Fold the "locate fallbacks" pass into
	the postscript output pass, and add a simple, first implementation
	of image fallbacks.

2005-07-13  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-font.c: (_cairo_simple_font_face_create_font): Rename
	CAIRO_FONT_BACKEND_DEFAULT to the more accurate
	CAIRO_SCALED_FONT_BACKEND_DEFAULT.

2005-07-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-ft-private.h:
	* src/cairo-ft-font.c: (_cairo_unscaled_font_is_ft),
	(_cairo_scaled_font_is_ft): New predicates to allow checking for
	cairo_ft derivates of generic font type.

	* src/cairo-ps-surface.c: (_cairo_ps_surface_get_font),
	(_cairo_ps_surface_show_glyphs), (_ps_output_show_glyphs):
	* src/cairo-pdf-surface.c: (_cairo_pdf_document_get_font),
	(_cairo_pdf_surface_show_glyphs):